--- a/UwpSpeechRecognitionSampleSolution/UwpSpeechRecognitionSample.UwpApplication/UwpSpeechRecognitionSample.UwpApplication.csproj
+++ b/UwpSpeechRecognitionSampleSolution/UwpSpeechRecognitionSample.UwpApplication/UwpSpeechRecognitionSample.UwpApplication.csproj
@@ -93,7 +93,6 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Converters\ListeningStateToTextConverter.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
@@ -135,6 +134,7 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Converters\" />
     <Folder Include="Enums\" />
     <Folder Include="EventArgs\" />
     <Folder Include="Helpers\" />
